# ml-experiment-template

./: .gitattributes  .gitignore  Makefile  README.md  experiment.md  pyproject.toml
.github/workflows/: experiment.yml
configs/: default.yaml  example.yaml
experiment/: example.py  run.py
src/: config.py  results.py  run.py  seed.py  visualize.py
tests/: test_config.py  test_results.py
